--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.23",
     "@types/node": "^15.0.1",
+    "@types/uuid": "^8.3.0",
     "eslint": "^7.25.0",
     "eslint-config-lxsmnsyc": "^0.2.1",
     "jest": "^26.6.3",
@@ -39,5 +40,8 @@
     "test": "pridepack test --passWithNoTests",
     "clean": "pridepack clean",
     "watch": "pridepack watch"
+  },
+  "dependencies": {
+    "uuid": "^8.3.2"
   }
 }
